# task_management

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  verify_subtasks.py  verify_subtasks_std.py
.github/workflows/: backend.yml  ci-cd.yml  frontend.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: task.py
app/api/v1/tasks/: models.py  router.py  schemas.py
app/api/v1/tasks/endpoints/: tags.py  tasks.py
app/api/v1/tasks/services/: tag_service.py  task_service.py
app/api/v1/users/: dependencies.py  models.py  schemas.py  services.py
app/api/v1/users/endpoints/: login.py  private.py  users.py  utils.py
app/core/: config.py
app/db/: base.py
app/db/migrations/: env.py
app/models/: mixins.py  tag.py  task.py
app/schemas/: tag.py  task.py
app/services/: task_service.py
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/app/: initial_data.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0ac992c9f8b2_first_migration_after_cloning_the_.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/analytics/: router.py  schemas.py  services.py
backend/app/api/v1/architect/: agent.py  prompts.py  router.py  schemas.py  service.py
backend/app/api/v1/attachments/: models.py  router.py  schemas.py  services.py
backend/app/api/v1/comments/: models.py  router.py  schemas.py  services.py
backend/app/api/v1/projects/: models.py  router.py  schemas.py
backend/app/api/v1/projects/endpoints/: projects.py
backend/app/api/v1/projects/services/: project_service.py
backend/app/api/v1/tasks/: models.py  router.py  schemas.py
backend/app/api/v1/tasks/endpoints/: tags.py  tasks.py
backend/app/api/v1/tasks/services/: tag_service.py  task_service.py
backend/app/api/v1/users/: dependencies.py  models.py  router.py  schemas.py  services.py  utils.py
backend/app/api/v1/users/endpoints/: login.py  private.py  users.py  utils.py
backend/app/auth/: models.py  schemas.py
backend/app/core/: ai.py  config.py  db.py  observability.py  redis.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0f75a4770009_changed_the_project_to_task.py  41a4b70100fa_added_relationship_between_user_and_.py  5b5ad7c9c4f1_add_architect_task_fields.py  7e1940f1967e_created_models_for_proeject_and_.py  8ed673d36d36_added_relationship_between_user_and_.py  a0413028b144_created_models_for_proeject_and_.py  ad46bed0b17c_created_models_for_proeject_and_.py  e855eb1d52d4_user_model_added.py  f47cdcd62393_initial_setup.py
backend/tests/: conftest.py  test_architect_prompts.py  test_config.py  test_health.py
frontend/: .dockerignore  Dockerfile  FRONTEND_EXPLANATION.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/analytics/: page.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/projects/: page.tsx
frontend/app/(dashboard)/projects/[id]/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/app/(dashboard)/tasks/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: Navbar.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/components/architect/: ArchitectActions.tsx  ArchitectChat.tsx  ArchitectModal.tsx  ArchitectRefinement.tsx  ArchitectSetup.tsx  ArchitectTaskList.tsx
frontend/components/modals/: ProjectModal.tsx  TaskDetailModal.tsx  TaskModal.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/lib/: api.ts
frontend/services/: analytics.service.ts  architect.ts  attachment.service.ts  auth.service.ts  comment.service.ts  project.service.ts  task.service.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: Board.tsx  CreateTaskModal.tsx  FilterBar.tsx  LoginForm.tsx  Navbar.tsx  TaskCard.tsx  TaskColumn.tsx  TaskModal.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
frontend/store/: authStore.ts
frontend/types/: api.ts
migrations/versions/: b379e2cc982a_initial_tables.py
