[project]
name = "sofi-task-backend"
version = "0.1.0"
description = "FastAPI backend for the Sofi Task workspace"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "emails>=0.6",
    "fastapi[standard]>=0.128.1",
    "jinja2>=3.1.6",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic-ai>=1.77.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "redis>=7.2.0",
    "sqlalchemy[asyncio]>=2.0.46",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ruff>=0.15.2",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ty>=0.0.1a17",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["app/db/migrations", ".venv", "uploads", "app/email-templates"]


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
    "ASYNC",
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ty.environment]
python-version = "3.14"
root = ["./"]

[tool.ty.src]
include = ["app", "tests"]
exclude = [
    "app/db/migrations",
    "uploads",
    "app/email-templates",
]

[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
